# Zatoona

./: .dockerignore  .env.example  .gitignore  Dockerfile.app  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  read.txt  requirements.txt
Authentication/: .env.example  Dockerfile.auth  auth_server.py  config.py  database.py  models.py  question_bank.db  requirements_auth.txt  security.py
Database/: .env.example  Dockerfile.pgadmin  Dockerfile.postgres
agents/: __init__.py  answer_loader.py  corrector_agent.py  exam_loader.py  generator_agent.py  validator_agent.py
config/: settings.py
graph/: __init__.py  __main__.py  edges.py  exam_graph.py  nodes.py  state.py
mcp_server/: mcp_client.py  server.py
mcp_server/tools/: retrieval_tool.py
nginx/: Dockerfile.nginx  nginx.conf
outputs/: report_session_001.json
sandbox/: app.py
schemas/: __init__.py  exam_object.py  feedback_report.py  note_chunk.py
tests/: test_exam_store.py  test_mcq.py  test_topic_namer.py
tests/team_a/: test_chunking.py  test_docling_parser.py  test_enrichment.py  test_external_ingestion.py  test_ingestion.py  test_loaders.py  test_mcp_server.py  test_retriever.py  test_session_isolation.py  test_youtube.py
tests/team_b/: conftest.py  test_exam_graph.py  (+2 more)
ui/: app.py
utils/: exam_store.py  report_writer.py  topic_namer.py
vector_db/: chroma_client.py  chunking.py  docling_parser.py  embedder.py  enrichment.py  ingestion.py  loaders.py  notion.py  retriever.py  youtube.py
zatoona-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
