[project]
name = "leo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.10",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
]
